--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
 /coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
@@ -24,3 +24,6 @@ yarn-error.log*
 
 venv
 __pycache__
+
+.vscode
+.flaskenv
